--- a/src/App.css
+++ b/src/App.css
@@ -17,11 +17,10 @@
 }
 
 .services {
-  /* background-image: url("/images/img-2.jpg"); */
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  color: #fff;
+  color: black;
   font-size: 100px;
 }
 
@@ -30,7 +29,7 @@
   background-position: center;
   background-size: fill;
   background-repeat: no-repeat;
-  color: #fff;
+  color: black;
   font-size: 100px;
 }
 
@@ -39,6 +38,6 @@
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  color: #fff;
+  color: black;
   font-size: 100px;
 }
